fix: syntax lol

--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -24,7 +24,7 @@
   </div>
   <div class="menu">
     <a href="/post">>archives</a>
-    <a href="{{ get_taxonomy_url(kind="categories", name="adventures")">>adventures</a>
+    <a href="{{ get_taxonomy_url(kind="categories", name="adventures") }}">>adventures</a>
     &nbsp;<a href="/about">>about</a>
   </div>
 </div>
