--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -64,10 +64,11 @@ body {
 .site_title {
     display: flex;
     justify-content: space-between;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     a {
         color: $textcolor;
         text-decoration: none;
+        padding-top : 15px;
     }
 }
 
