--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -20,12 +20,12 @@
   <div class="site_title">
     <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
           width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
-    <p><a href="/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ config.title }}</a></p>
+    <p><a href="/">{{ config.title }}</a></p>
   </div>
   <div class="menu">
-    <a href="/post">>archives</a>
-    &nbsp;<a href="/categories/adventures">>adventures</a>
-    &nbsp;<a href="/about">>about</a>
+    <a href="/post">> Archives</a>
+    &nbsp;&nbsp;<a href="/categories/adventures">> Adventures??</a>
+    &nbsp;&nbsp;<a href="/about">> About</a>
   </div>
 </div>
 
