--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -62,8 +62,8 @@ body {
 }
 
 .site_title {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+    justify-content: center;
     font-size: 2.5rem;
     a {
         color: $textcolor;
