--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -63,7 +63,7 @@ body {
 
 .site_title {
     display: block;
-    justify-content: center;
+    justify-content: space-between;
     font-size: 2.5rem;
     a {
         color: $textcolor;
