--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -62,9 +62,9 @@ body {
 }
 
 .site_title {
-    display: block;
+    display: flex;
     justify-content: space-between;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     a {
         color: $textcolor;
         text-decoration: none;
