--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -45,7 +45,7 @@ body {
     background-color: $backgroundcolor;
     top: 0;
     padding-bottom : 5px;
-    border-bottom: solid 1px $tender-blue;
+    border-bottom: solid 2px $tender-blue;
     overflow: hidden;
     a {
         color: $lighttextcolor;
@@ -65,6 +65,15 @@ body {
     display: flex;
     justify-content: space-between;
     font-size: 2.25rem;
+    color: $textcolor;
+    text-decoration: none;
+    padding-top : 15px;
+}
+
+.site_title {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
     a {
         color: $textcolor;
         text-decoration: none;
