--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -17,13 +17,10 @@
 </head>
 
 <div class="header">
-    <p><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
-          width="{{ config.extra.emily_iconsize }}" height=auto></p>
-    <div class="site_title">
-    <p>{{ config.title }}</p>
-      <div class="subtitle">
-        <p>{{ config.subtitle }}</p>
-      </div>
+  <div class="site_title">
+    <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
+          width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
+    <p><a href="/">{{ config.title }}</a></p>
   </div>
   <div class="menu">
     <a href="/post">> Archives</a>
