--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -17,13 +17,13 @@
 </head>
 
 <div class="header">
-  <div class="site_title">
+  <div class="logo">
     <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
           width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
-    <p><a href="/">{{ config.title }}</a></p>  
   </div>
-  
-  <p>Yee</p>
+  <div class="site_title">
+    {{ config.title }}
+  </div>
   
   <div class="menu">
     <a href="/post">> Archives</a>
