--- a/themes/emily_zola_theme/templates/index.html
+++ b/themes/emily_zola_theme/templates/index.html
@@ -23,6 +23,7 @@
         &emsp;<a href="{{ get_taxonomy_url(kind="tags", name=tag) | safe }}">#{{ tag }}</a>
         {% endfor %}
     {% endif %}
+    &nbsp;(Some kind of description.)
     </div>
   </p>
 {% endfor %}
