--- a/themes/emily_zola_theme/templates/index.html
+++ b/themes/emily_zola_theme/templates/index.html
@@ -11,6 +11,7 @@
     </div>
     <div class="title">
       <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
+      <p>{{ page.description }}</p>
     </div>
     <div class="taxonomies_index">
     {% if page.taxonomies.categories %}
