--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -70,10 +70,9 @@ body {
         text-decoration: none;
         padding-top : 15px;
     }
-}
-
-.subtitle {
-    font-size: 1.5rem;
+    br {
+        font-size: 1.25rem;
+    }
 }
 
 .menu {
