--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -23,7 +23,9 @@
   </div>
   <div class="site_title">
     {{ config.title }}
-    <br>&nbsp;A new line?
+  </div>
+  <div class="site_subtitle">
+    <br>A new line?  
   </div>
   
   <div class="menu">
