--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -41,6 +41,8 @@ body {
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
     color: $lighttextcolor;
     background-color: $backgroundcolor;
     top: 0;
