--- a/themes/emily_zola_theme/templates/index.html
+++ b/themes/emily_zola_theme/templates/index.html
@@ -11,6 +11,8 @@
     </div>
     <div class="title">
       <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
+    </div>
+    <div class="description">
       <p>{{ page.description }}</p>
     </div>
     <div class="taxonomies_index">
