--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -17,21 +17,15 @@
 </head>
 
 <div class="header">
-  <div class="logo">
+  <div class="site_title">
     <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
           width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
+    <p><a href="/">&nbsp;{{ config.title }}</a></p>
   </div>
-  <div class="site_title">
-    {{ config.title }}
-  </div>
-  <div class="site_subtitle">
-    <br>A new line?  
-  </div>
-  
   <div class="menu">
     <a href="/post">> Archives</a>
-    &nbsp;&nbsp;<a href="/categories/adventures">> Adventures??</a>
-    &nbsp;&nbsp;<a href="/about">> About</a>
+    &nbsp;<a href="/categories/adventures">> Adventures</a>
+    &nbsp;<a href="/about">> About</a>
   </div>
 </div>
 
