--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -7,6 +7,7 @@ $tender-magenta:#d3b987;
 $backgroundcolor: #282828;
 $textcolor: #feffff;
 $lighttextcolor: #eeeeee;
+$darktextcolor: #754dbf;
 
 body {
     line-height: 1.5;
@@ -65,7 +66,7 @@ body {
 .site_title {
     display: flex;
     justify-content: space-between;
-    font-size: 1.5rem;
+    font-size: 2.0rem;
     a {
         color: $textcolor;
         text-decoration: none;
@@ -74,6 +75,7 @@ body {
 
 .menu {
     text-align: right;
+    font-size: 1.2rem;
     a {
         text-decoration: none;
     }
@@ -120,7 +122,7 @@ body {
 
 .taxonomies a {
     font-size: 0.8rem;
-    color: $lighttextcolor;
+    color: $darktextcolor;
     text-decoration: none;
 }
 
@@ -128,14 +130,14 @@ body {
     text-align: right;
     a {
         font-size: 0.8rem;
-        color: $lighttextcolor;
+        color: $darktextcolor;
         text-decoration: none;
     }
 }
 
 .taxonomies_index a {
     font-size: 0.9rem;
-    color: $lighttextcolor;
+    color: $darktextcolor;
     text-decoration: none;
 
     @media screen and(max-width: 480px) {
