--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -65,7 +65,7 @@ body {
 
 .site_title {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     font-size: 2.0rem;
     a {
         color: $textcolor;
