--- a/themes/emily_zola_theme/sass/dark.scss
+++ b/themes/emily_zola_theme/sass/dark.scss
@@ -65,8 +65,8 @@ body {
 
 .site_title {
     display: flex;
-    justify-content: space-evenly;
-    font-size: 2.0rem;
+    justify-content: space-between;
+    font-size: 2.2rem;
     a {
         color: $textcolor;
         text-decoration: none;
