--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -20,7 +20,9 @@
   <div class="site_title">
     <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
           width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
-    <p><a href="/">&nbsp;{{ config.title }}</a></p>
+    <p><a href="/">{{ config.title }}</a>
+    <br>Still dunno how to subtitle lmao
+    </p>
   </div>
   <div class="menu">
     <a href="/post">> Archives</a>
