--- a/themes/emily_zola_theme/templates/base.html
+++ b/themes/emily_zola_theme/templates/base.html
@@ -21,7 +21,7 @@
     <p><a href="/"><img src="{{ config.base_url }}{{ config.extra.emily_icon }}" alt="{{ config.title }}"
           width="{{ config.extra.emily_iconsize }}" height=auto></a></p>
     <p><a href="/">{{ config.title }}</a>
-    <br>Still dunno how to subtitle lmao
+    <br><div class="site_subtitle">Still dunno how to subtitle lmao</div>
     </p>
   </div>
   <div class="menu">
