--- a/themes/emily_zola_theme/templates/post-page.html
+++ b/themes/emily_zola_theme/templates/post-page.html
@@ -8,6 +8,7 @@
 <p>
   <div class="title_postpage">{{ page.title }}</div>
 </p>
+<br><div class="description">{{ page.description }}</div>
 <p>
   <div class="date_postpage">{{ page.date }}</div>
   <div class="taxonomies_postpage">
